김민철 S12P11C207-237 필요없는 파일 지우기 20250207